hphp/hack/test/typecheck/reactive/parse_multiple6.php.exp
File "parse_multiple6.php", line 3, characters 1-18:
Multiple __Rx, __RxShallow, or __RxLocal annotations are not allowed. (Parsing[1002])
